--- a/src/MinecraftStatus/web.config
+++ b/src/MinecraftStatus/web.config
@@ -11,4 +11,8 @@
     </handlers>
     <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" forwardWindowsAuthToken="false"/>
   </system.webServer>
+<appSettings>
+  <add key="serverAddr" value="mc.afa.moe"/>
+  
+</appSettings>
 </configuration>
